--- a/valdation.html
+++ b/valdation.html
@@ -37,7 +37,7 @@
           >
             <h1
               style="
-                color: rgba(255, 255, 255, 0.205);
+                color: rgba(255, 255, 255, 0.2);
                 font-weight: 900;
                 font-size: 45px;
               "
@@ -46,20 +46,20 @@
             </h1>
           </div>
         </div>
-        <form action="" class="container">
-          <div class="form-group name-criteria">
-            <label for="">Name:</label>
+        <form action="" class="container mt-4">
+          <div class="form-group name-div">
             <input
+              placeholder="name"
               type="text"
               name=""
               id="name"
               required
-              class="form-control bg-light"
+              class="form-control bg-light border"
             />
           </div>
-          <div class="form-group">
-            <label for="">email:</label>
+          <div class="form-group email-div">
             <input
+              placeholder="email"
               type="email"
               name=""
               id="email"
@@ -67,24 +67,24 @@
               class="form-control bg-light"
             />
           </div>
-          <div class="form-group">
-            <label for="">password:</label>
+          <div class="form-group password-div">
             <input
+              placeholder="password"
               type="password"
               name=""
               id="password"
               required
-              class="form-control bg-light"
+              class="form-control bg-light border"
             />
           </div>
           <div class="form-group">
-            <label for="">confirm password:</label>
             <input
+              placeholder="confirm-password"
               type="password"
               name=""
               id="confirm-password"
               required
-              class="form-control bg-light"
+              class="form-control bg-light border"
             />
           </div>
           <button class="btn btn-outline-success w-100 py-3">submit</button>
